mongo-app-deployment/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa-scripts-deployment
  labels:
    app: qa-scripts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qa-scripts
  template:
    metadata:
      labels:
        app: qa-scripts
    spec:
      containers:
      - name: qa-scripts
        image: 
        ports:
        - containerPort: 80
        
---
apiVersion: v1
kind: Service
metadata:
  name: qa-scripts-service
spec:
  selector:
    app: qa-scripts
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
